@@ -69,7 +69,7 @@ setup(
         "rcsb.utils.io >= 0.65",
         "rcsb.utils.config >= 0.35",
         "rcsb.utils.multiproc >= 0.17",
-        "rcsb.utils.validation >= 0.21",
+        "rcsb.utils.validation >= 0.22",
         "rcsb.utils.chemref >= 0.45",
         "rcsb.utils.citation >= 0.15",
         "rcsb.utils.ec >= 0.21",
