@@ -243,3 +243,4 @@
  19-May-2020  V0.987 Reduce verbose logging of memory usage and use alternative $regex filter for mongo purging
  21-May-2020  V0.988 Added additional methods to export search group and context statistics
  22-May-2020  V0.989 Adding auth to entity polymer sequence residue mapping item.
+  3-Jun-2020  V0.990 Updating dependencies for rcsb.utils.validation and validation test conditions.
